ajustei a pagina principal e o celular

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <main>
+        <h1>haha</h1>
         <section id="telefone">
+            <h1>hihi</h1>
 
         </section>
         <section id="redes-sociais">
+            <h1>hoho</h1>
 
         </section>
     </main>
