--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <main>
-        <h1>haha</h1>
         <section id="telefone">
-            <h1>hihi</h1>
+            <iframe src="home.html" frameborder="0" name="app" id="app"></iframe>
 
         </section>
         <section id="redes-sociais">
-            <h1>hoho</h1>
 
         </section>
     </main>
