--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
         </section>
         <section id="redes-sociais">
+            <a href="home.html" target="app"> <img src="imagens/logo-home.jpg" alt="home"></a><br>
+
+            <a href="github.html" target="app"> <img src="imagens/logo-github.jpg" alt="github"></a><br>
+
+            <a href="instagram.html" target="app"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="" target="app"></a>
 
         </section>
     </main>
