atualizei imagens das minhas redes sociais

--- a/github.html
+++ b/github.html
@@ -29,6 +29,9 @@
             width: 10px;
             
         }
+        a:hover{
+            background-color: rgb(154, 4, 4);
+        }
         img,a{
             width: 240px;
             margin: auto;
